<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/contact" android:title="@string/contact"
        android:icon="@drawable/group_panic_user"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/task" android:title="@string/task"
        android:icon="@drawable/movement_icon"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/mg_profile" android:title="@string/profile"
        android:icon="@drawable/contact"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/mg_settings" android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_applications_white_18dp"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/themesx" android:title="Switch Mode"
        android:icon="@drawable/task"
        app:showAsAction="withText|ifRoom" />

    <item android:id="@+id/info" android:title="@string/more_information"
        android:icon="@drawable/ic_info_white_18dp"
        app:showAsAction="withText|ifRoom" />
</menu>
